--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -4,32 +4,32 @@
 
 u_spearmen_run
 {
-"Spearmen run by default instead of walking"
+"Biegający włócznicy"
 }
 
 u_spearmen_run_descr
 {
-"Makes spearmen run by default instead of the slow walking."
+"Włócznicy będą cały czas biegać."
 }
 
 o_seed_modification_possibility_title
 {
-"Game Randomseed"
+"Generowane ziarno gry"
 }
 
 o_seed_modification_possibility_only_set
 {
-"Enable fixed game randomseed"
+"Włącza generowane ziarno gry"
 }
 
 o_seed_modification_possibility_only_set_descr
 {
-"Setting the Game seed will allow AI-only games to play out the same way if the same map settings are used. For player-AI games, it will ensure the same start conditions in the map (AIV selection for example). To set the game seed, enable this option and create a file called 'live' with a 6 digit number in the game install/gameseeds directory. CAUTION: This feature only works after also restarting the game!"
+"Ta opcja pozwala na wygenerowanie ziarna gry (działa tylko na rozgrywki samych botów), aby rozgrywka była za każdym razem taka sama, jeśli wybrało się takie same ustawienia mapy. Aby to zrobić, włącz tę opcję i stwórz plik o nazwie 'live' z 6 cyframi w folderze z zainstalowaną grą/podfolderze z ziarnami (gameseed). UWAGA: Ta opcja działa po zrestartowaniu gry!"
 }
 
 o_seed_modification_possibility
 {
-"Enable & Save game randomseeds"
+"Włącz i zapisuj generowane ziarna gry"
 }
 
 o_seed_modification_possibility_descr
@@ -39,205 +39,207 @@ o_seed_modification_possibility_descr
 
 ai_recruitstate_initialtimer
 {
-"Set AIs initial time until they recruit by the AIC parameters"
+"Ustaw botom czas do rekrutacji jednostek zgodnie z parametrami AIC"
 }
 
 ai_recruitstate_initialtimervalue_descr
 {
-"Set this value to number of months for which the AI will exclusively recruit defence troops, unless it has already filled up its defence total"
+"Można tu ustawić liczbę miesięcy, do której boty będą rekrutować wyłącznie jednostki do obrony, chyba że wypełnili już limit żołnierzy na zamku"
 }
 
 ai_defense
 {
-"Fix reinforcement of defense troops"
+"Usprawnione wysyłanie posiłków do obrony"
 }
 
 ai_defense_descr
 {
-	"Fixes a bug which stopped the AI from reinforcing missing troops &
-on walls and towers, as long as defensive patrols were still around."
+"Naprawniono błąd, który uniemożliwiał SI dosyłanie brakujących jednostek &
+na mury i wieże w momencie, gdy patrole defensywne były ciągle obecne."
 }
 
 ai_housing
 {
-"Let the AI build houses smarter"
+"Mądrzejsze budowanie domów przez boty"
 }
 
 build_housing_descr
 {
-"Difference between current and maximum population, above which the AI stops building houses. This is 0 in vanilla. This also disables deleting of houses for the AI."
+"Różnica między obecną a maksymalną populacją, po której bot przestaje stawiać domy. W oryginale jest to 0. Ta opcja wyłącza również usuwanie domów przez bota."
 }
 
 campfire_housing_descr
 {
-"Number of idle peasants at the campfire before the AI stops building houses. This also disables deleting of houses for the AI."
+"Ilość wolnych chłopów przy ognisku, zanim bot przestanie stawiać domy. Ta opcja wyłącza również usuwanie domów przez bota."
 }
 
 delete_housing
 {
-"Disable the AI's ability to delete houses."
+"Wyłącz usuwanie domów."
 }
 
 delete_housing_descr
 {
-"When this option is selected the AI will never delete houses."
+"Kiedy ta opcja jest zaznaczona, boty nie będą usuwać domów."
 }
 
 aiv_prompt
 {
-"Custom AIVs detected. Do you want to create a backup Milord?"
+"Wykryto własne pliki AIV. Czy chcesz stworzyć kopię zapasową, mój Panie?"
 }
 
 aiv_cli_prompt
 {
-"Custom AIVs detected. Enter 'delete' to erase or enter folder name to copy files to."
+"Wykryto własne pliki AIV. Wpisz 'delete', aby usunąć lub podaj nazwę folderu w celu przekopiowania plików."
 }
 
 install_abort_io
 {
-"Installation aborted. Files with the same name already exist in this folder. Please try again and select a different folder."
+"Instalacja przerwana. Pliki z taką samą nazwą znajdują się już w tym folderze. Wybierz inny folder i spróbuj ponownie."
 }
 
 install_abort
 {
-"Installation aborted"
+"Instalacja przerwana"
 }
 
 backup_aiv_select
 {
-"Select Backup AIV folder"
+"Wybierz zapasowy folder dla plików AIV"
 }
 
 o_change_siege_engine_spawn_position_catapult
 {
-"Spawn siege engines in the center of their tent"
+"Wyśrodkuj pozycję pojawiania się machin oblężniczych"
 }
 
 o_change_siege_engine_spawn_position_catapult_descr
 {
-"Siege engines are spawning in the middle of their construction tent, instead of the top right corner."
+"Machiny oblężnicze będą pojawiać się na środku miejsca, w którym stał namiot oblężniczy."
 }
 
 o_stop_player_keep_rotation
 {
-"Rotate player keeps same as AI's"
+"Odwróć siedziby graczy"
 }
 
 o_stop_player_keep_rotation_descr
 {
-"Player keeps now get rotated the same way, that AI keeps rotate on a map, facing with their campfire outwards towards the map edge."
+"Siedziby graczy będą odwracać się ogniskiem (wejściem) w stronę krańca mapy."
 }
 
 o_restore_arabian_engineer_speech
 {
-"Restore engineer arabian speech"
+"Przywróć arabskie teksty inżynierów"
 }
 
 o_restore_arabian_engineer_speech_descr
 {
-"Allows engineers to speak the originally recorded arabian voicelines when the player uses the Arabian lord."
+"Ta opcja pozwala inżynierom na korzystanie z nagranych arabskich tekstów, gdy gracz gra jako arabski lord.
+
+Tekstów nie ma zbyt wielu, więc mogą być irytujące po dłuższej chwili."
 }
 
 u_fix_lord_animation_stuck_movement
 {
-"Reset Lord animation, after destroying buildings"
+"Zresetuj animację lorda po zniszczeniu budynku"
 }
 
 u_fix_lord_animation_stuck_movement_descr
 {
-"Reset the pose of the Lord, after it stops moving or destroys a building, into the upright position. Usually it would get stuck bend down to the ground."
+"Opcja pozwala zresetować animację lorda, gdy każemu mu zniszczyć budynek. Zazwyczaj po wykonaniu zadania stał w dziwnej pozie."
 }
 
 fix_apple_orchard_build_size
 {
-"Shrink apple orchard's build size"
+"Zmniejsz rozmiar budowy sadów jabłoni"
 }
 
 fix_apple_orchard_build_size_descr
 {
-"Changes the apple orchard's build size to the size it occupies after the farm is placed down. This saves some space when building the farms and increases the rate with which the AI is able to put these farms down."
+"Opcja zmniejsza rozmiar budowy sadów jabłoni, aby był taki sam, jak rzeczywisty rozmiar całego budynku. Zaoszczędzi to miejsce na trawie i pomoże botom na lepszy rozwój."
 }
 
 u_fix_applefarm_blocking
 {
-"Fix apple farm worker getting blocked"
+"Napraw blokowanie sadów jabłoni"
 }
 
 u_fix_applefarm_blocking_descr
 {
-"Apple farmers can no longer be blocked by placing buildings at the top left side of the farm."
+"Farmerzy nie będą już blokowani, gdy postawi się budynek w lewej, górnej stronie farmy."
 }
 
 o_increase_path_update_tick_rate
 {
-"Check more often for available paths"
+"Zwiększ częstotliwość odświeżania możliwych ścieżek"
 }
 
 o_increase_path_update_tick_rate_descr
 {
-"In vanilla, it took 200 game ticks to check for new paths, often stopping units to move into the castle after destroying a gate or tower immediately.
+"W oryginale jednostki potrzebowały dużo czasu, zanim mogły zrozumieć, że można wejść do zamku po zniszczeniu bramy lub wieży..
 
-Availability is calculated every 50 gameticks now, allowing the units to 'realize' new paths more quickly."
+Ta opcja zwiększa czterokrotnie częstotliwość odświeżania możliwych ścieżek wykrywanych przez jednostki, dzięki czemu szybciej zrozumieją, że można już wejść do zamku."
 }
 
 o_fix_ladderclimb
 {
-"Fix ladder climbing destination bug"
+"Napraw błąd związany z wchodzeniem po drabinie"
 }
 
 o_fix_ladderclimb_descr
 {
-"Units will now remember their original destination after climbing a ladder, not getting stuck on the ladder."
+"Jednostki nie będą już gubić się po wejściu na mury po drabinie i nie będą schodzić od razu na dół."
 }
 
 u_tanner_fix
 {
-"Fix tanners getting all the same cow"
+"Zwiększ wydajność garbarzy"
 }
 
 u_tanner_fix_descr
 {
-"Tanners will no longer return without a cow when another tanner took their target cow. They will now instead stand around a bit and then get another one."
+"Garbarze nie będą już wracać do budynku, gdy ktoś inny zabrał krowę, po którą szli. Zamiast tego postoją chwilę w miejscu i wyruszą po kolejną krowę."
 }
 
 o_fix_fletcher_bug
 {
-"Fix fletcher pathing"
+"Napraw błąd łuczarza"
 }
 
 o_fix_fletcher_bug_descr
 {
-"Fixes the behaviour where fletchers go back to the workplace after depositing the bow/crossbow instead of going straight to the stockpile."
+"Naprawia błąd, który powoduje, że łuczarz idzie do swojego budynku po odniesieniu broni do zbrojowni. Zamiast tego będzie teraz szedł od razu do składu zapasów po deski."
 }
 
 ai_fix_crusader_archers_pitch
 {
-"Fix AI's crusader archers not lighting pitch"
+"Napraw błąd z brakiem podpalania smoły przez łuczników europejskich"
 }
 
 ai_fix_crusader_archers_pitch_descr
 {
-"AI's crusader archers light pitch the same way arabian archers do, defending against enemy units."
+"Łucznicy europejscy zarządzani przez SI nie podpalali smoły. Ta opcja naprawia ten błąd."
 }
 
 o_fix_baker_disappear
 {
-"Fix bakers despawning"
+"Napraw błąd ze znikającym piekarzem"
 }
 
 o_fix_baker_disappear_descr
 {
-"Bakers no longer disappear, after they find no flour is left at the stockpile."
+"Piekarze nie będą znikać, gdy dojdą do składu zapasów, w którym nie ma już mąki."
 }
 
 o_fix_moat_digging_unit_disappearing
 {
-"Fix despawning of digging units"
+"Napraw błąd ze znikającymi jednostkami kopiącymi fosę"
 }
 
 o_fix_moat_digging_unit_disappearing_descr
 {
-"Fixes the bug where moat diggers would disappear randomly while digging. Note that they can still disappear if you order them to move while digging and they happen to stand on an unwalkable tile!"
+"Naprawia błąd, który powodował losowe znikanie jednostek kopiących fosę. Uwaga: jednostki mogą dalej znikać, jeśli każesz im przemieścić się w momencie, gdy stoją w miejscu, z którego nie da się normalnie ruszyć!"
 }
 
 // ======================
