--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -260,7 +260,7 @@ UCP制作团队
 [Sh0wdown](https://github.com/Sh0wdown)  
 
 项目负责
-[Kimberly](https://github.com/ByBurton/)  
+[Kimberly Azula](https://github.com/ByBurton/)  
 [Krarilotus (Youtube)](https://www.youtube.com/channel/UCMXHqa2vmclSoSkuCu_q5rw)
 
 协力制作
