--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -177,8 +177,7 @@ o_increase_path_update_tick_rate
 o_increase_path_update_tick_rate_descr
 {
 "В ваниле, это заняло 200 игровых тиков, чтобы проверить новые пути, часто останавливая юнитов, чтобы перейти в замок после уничтожения ворот или башни немедленно.
-
-Доступность рассчитывается теперь каждые 50 игровых тиков, что позволяет юнитам "реализовывать" новые пути быстрее."
+ Доступность рассчитывается теперь каждые 50 игровых тиков, что позволяет юнитам реализовывать новые пути быстрее."
 }
 
 o_fix_ladderclimb
@@ -198,7 +197,7 @@ u_tanner_fix
 
 u_tanner_fix_descr
 {
-"Кожевники больше не вернутся без коровы, когда другой кожевник забрал их целевую корову. Вместо этого они немного встанут вокруг, а потом возьмут еще одну корову."
+"Кожевники больше не вернутся без коровы, когда другой кожевник забрал их целевую корову. Вместо этого они немного подождут, а потом возьмут еще одну корову."
 }
 
 o_fix_fletcher_bug
@@ -435,7 +434,7 @@ ui_aicselect
 
 o_firecooldown
 {
-	"Увеличить пожаробезопасную продолжительность пожаротушащих зданий"
+	"Увеличить пожаробезопасную продолжительность потушенных зданий"
 }
 
 o_firecooldown_descr
@@ -517,9 +516,8 @@ u_ArabWall
 
 u_ArabWall_descr
 {
-	"В Ваниле арабские мечники разрушают стены медленнее любого другого подразделения &
-ближнего боя. С этой опцией скорость удара против стен примерно удваивается для них, &
-поставив их немного выше копейщиков."
+	"В Ваниле арабские мечники разрушают стены медленнее любого другого подразделения ближнего боя.
+С этой опцией скорость удара против стен примерно удваивается для них,поставив их немного выше копейщиков."
 }
 
 u_spearmen
@@ -802,7 +800,7 @@ o_onlyai_descr
 	"Убирает игрока 1, чтобы вы могли видеть только 8 AI в одном и том же режиме. &
 Сохранения игры теперь правильно загружаются в этом режиме. Иногда ошибка &
 появляется, когда случайные объекты появляются на всей карте. Это просто визуальный баг &
-и его можно убрать &, сохранив игру, завершая миссию и перезагружая &
+и его можно убрать сохранив игру, завершая миссию и перезагружая &
 сохранить файл."
 }
 
@@ -813,7 +811,7 @@ o_moatvisibility
 
 o_moatvisibility_descr
 {
-	"Ваш собственный,но не выкопанный ров всегда будет показан & с этой опцией, даже &
+	"Ваш собственный,но не выкопанный ров всегда будет показан с этой опцией, даже 
 если вы отмените выбор размещения рва."
 }
 
@@ -824,9 +822,9 @@ o_engineertent
 
 o_engineertent_descr
 {
-	"С помощью этой настройки игра не отменяет выбранное вами осадное оборудование &
-после размещения больше одной палатки. Таким образом, вы можете & создать несколько палаток за другим,
-без необходимости повторного выбора & одного и того же осадного оборудования."
+	"С помощью этой настройки игра не отменяет выбранное вами осадное оборудование 
+после размещения больше одной палатки. Таким образом вы можете создать несколько палаток за другим,
+без необходимости повторного выбора одного и того же осадного оборудования."
 }
 
 
@@ -1007,7 +1005,7 @@ ai_rebuild_descr
 
 o_healer
 {
-	"Целитель лечит жертв"
+	"Целитель лечит раненых солдат"
 }
 
 o_healer_descr
