--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -3,32 +3,32 @@
 // ======================
 u_spearmen_run
 {
-"Spearmen run by default instead of walking"
+"Spearmen run by default"
 }
 
 u_spearmen_run_descr
 {
-"Makes spearmen run by default instead of the slow walking."
+"Makes spearmen run by default like slaves and macemen."
 }
 
 o_seed_modification_possibility_title
 {
-"Game Randomseed"
+"Manipulate random number generator"
 }
 
 o_seed_modification_possibility_only_set
 {
-"Enable fixed game randomseed"
+"Set seed"
 }
 
 o_seed_modification_possibility_only_set_descr
 {
-"Setting the Game seed will allow AI-only games to play out the same way if the same map settings are used. For player-AI games, it will ensure the same start conditions in the map (AIV selection for example). To set the game seed, enable this option and create a file called 'live' with a 6 digit number in the game install/gameseeds directory. CAUTION: This feature only works after also restarting the game!"
+"Setting the Game seed will allow AI-only games to play out the same way if the same map settings are used. For games involving human players, it will ensure the same starting conditions (e.g. AIV selection). To set the game seed, enable this option and create a file called 'live' with a 6 digit number in the [Your UCP directory]/gameseeds directory. CAUTION: This feature only works after also restarting the game!"
 }
 
 o_seed_modification_possibility
 {
-"Enable & Save game randomseeds"
+"Save seeds"
 }
 
 o_seed_modification_possibility_descr
@@ -38,7 +38,7 @@ o_seed_modification_possibility_descr
 
 ai_recruitstate_initialtimer
 {
-"Set AIs initial time until they recruit by the AIC parameters"
+"Set the time for AIs, from which they recruit by the AIC parameters. Before that time, the AI will recruit exclusively defensive troops, and when all defensive slots are filled, attack troops."
 }
 
 ai_recruitstate_initialtimervalue_descr
@@ -53,8 +53,7 @@ ai_defense
 
 ai_defense_descr
 {
-	"Fixes a bug which stopped the AI from reinforcing missing troops &
-on walls and towers, as long as defensive patrols were still around."
+"Fixes a bug which stopped the AI from reinforcing missing troops on walls and towers, as long as defensive patrols were still around."
 }
 
 ai_housing
@@ -119,12 +118,12 @@ o_change_siege_engine_spawn_position_catapult_descr
 
 o_stop_player_keep_rotation
 {
-"Rotate player keeps same as AI's"
+"Rotate player keeps as AI's"
 }
 
 o_stop_player_keep_rotation_descr
 {
-"Player keeps now get rotated the same way, that AI keeps rotate on a map, facing with their campfire outwards towards the map edge."
+"Player keeps now get rotated the same way, that AI keeps rotate on a map, facing with their campfire towards the map edge."
 }
 
 o_restore_arabian_engineer_speech
@@ -139,12 +138,12 @@ o_restore_arabian_engineer_speech_descr
 
 u_fix_lord_animation_stuck_movement
 {
-"Reset Lord animation, after destroying buildings"
+"Reset lord animation after destroying buildings"
 }
 
 u_fix_lord_animation_stuck_movement_descr
 {
-"Reset the pose of the Lord, after it stops moving or destroys a building, into the upright position. Usually it would get stuck bend down to the ground."
+"Reset the pose of the lord after he stops moving or destroys a building into the upright position. Usually it would get stuck bend down to the ground."
 }
 
 fix_apple_orchard_build_size
@@ -174,9 +173,7 @@ o_increase_path_update_tick_rate
 
 o_increase_path_update_tick_rate_descr
 {
-"In vanilla, it took 200 game ticks to check for new paths, often stopping units to move into the castle after destroying a gate or tower immediately.
-
-Availability is calculated every 50 gameticks now, allowing the units to 'realize' new paths more quickly."
+"In vanilla, it took 200 game ticks to check for new paths, often stopping units to move into the castle after destroying a gate or tower immediately. Availability is calculated every 50 gameticks now, allowing the units to 'realize' new paths more quickly."
 }
 
 o_fix_ladderclimb
@@ -211,12 +208,12 @@ o_fix_fletcher_bug_descr
 
 ai_fix_crusader_archers_pitch
 {
-"Fix AI's crusader archers not lighting pitch"
+"Fix AI's european archers not lighting pitch"
 }
 
 ai_fix_crusader_archers_pitch_descr
 {
-"AI's crusader archers light pitch the same way arabian archers do, defending against enemy units."
+"AI's european archers light pitch the same way arabian archers do, defending against enemy units."
 }
 
 o_fix_baker_disappear
@@ -226,7 +223,7 @@ o_fix_baker_disappear
 
 o_fix_baker_disappear_descr
 {
-"Bakers no longer disappear, after they find no flour is left at the stockpile."
+"Bakers no longer disappear when they don't find flour at their targeted stockpile."
 }
 
 o_fix_moat_digging_unit_disappearing
@@ -236,7 +233,7 @@ o_fix_moat_digging_unit_disappearing
 
 o_fix_moat_digging_unit_disappearing_descr
 {
-"Fixes the bug where moat diggers would disappear randomly while digging. Note that they can still disappear if you order them to move while digging and they happen to stand on an unwalkable tile!"
+"Fixes the bug where moat digging units would disappear while digging. Note that they can still disappear if you order them to move while digging and they happen to stand on an unwalkable terrain!"
 }
 
 // ======================
