--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -4,47 +4,47 @@
 
 u_spearmen_run
 {
-"Speerträger rennen standartmäßig"
+"Speerträger rennen immer"
 }
 
 u_spearmen_run_descr
 {
-"Speerträger sind so schnell wie Sklaven und Streitkolbenkämpfer."
+"Speerträger laufen so schnell wie Sklaven und Streitkolbenkämpfer."
 }
 
 o_seed_modification_possibility_title
 {
-"Spiel Zufallsstartwert"
+"Manipuliere Zufallszahlengenerator"
 }
 
 o_seed_modification_possibility_only_set
 {
-"Ermögliche Festlegung eines Zufallsstartwertes"
+"Setze Zufallsstartwert"
 }
 
 o_seed_modification_possibility_only_set_descr
 {
-"Das Setzen eines Startwertes für den Zufallszahlen Generator ermöglicht es für KI Spiele immer den gleichen Verlauf zu nehmen. Für normale Spiele mit der KI können feste Startbedingungen ermöglicht werden (z.B. die gleiche Auswahl von AIV Dateien für die KI). Um den Zufallsstartwert zu setzen, erstelle ein Dokument mit dem Namen 'live', welches eine ganze Zahl enthält im Installationsverzeichnis/gameseeds Ordner. ACHTUNG: Dies funktioniert nur nach Neustarten des Spiels!"
+"Das Setzen eines Startwertes für den Zufallszahlengenerator lässt KI Spiele immer gleich ablaufen. Für Spiele mit menschlichen Spieler ermöglicht es reproduzierbare Startbedingungen der KI (z.B. die gleiche Auswahl von AIV Dateien für die KI). Um den Zufallszahlenstartwert zu setzen, erstelle eine Datei mit dem Namen 'live', welche eine ganze Zahl mit 6 Ziffern enthält, im Ordner [Dein UCP Verzeichnis]/gameseeds. ACHTUNG: Vor Beginn eines wiederholbaren Scharmützels muss das Spiel neu gestartet werden!"
 }
 
 o_seed_modification_possibility
 {
-"Ermögliche & Speichere Zufallsstartwerte"
+"Speichere Zufallsstartwerte"
 }
 
 o_seed_modification_possibility_descr
 {
-"Mit dieser Option werden Zufallsstartwerte von Spielen gespeichert, für die keiner im gameseeds Ordner gesetzt wurde. So können diese nachträglich in 'live' umbenannt werden um das Spiel zu wiederholen."
+"Mit dieser Option werden Zufallsstartwerte von Spielen gespeichert, für die keiner im Ordner [Dein UCP Verzeichnis]/gameseeds gesetzt wurde. So können diese nachträglich in 'live' umbenannt werden um das Spiel zu wiederholen."
 }
 
 ai_recruitstate_initialtimer
 {
-"Bestimme die Zeitspanne bis KIs anhand der AIC rekrutieren"
+"Setzt den Zeitpunkt, ab dem KIs anhand der AIC rekrutieren"
 }
 
 ai_recruitstate_initialtimervalue_descr
 {
-"Die Anzahl an Monaten, bis die KI anhand der in der AIC festgelegten Rekrutierungswahrscheinlichkeiten rekrutiert. Bis dahin rekrutiert sie ausschließlich defensive Truppen und falls diese voll sind Angriffstruppen."
+"Anzahl an Monaten, ab dem die KI anhand der in der AIC festgelegten Parameter rekrutiert. Bis dahin rekrutiert sie ausschließlich Defensivtruppen, und falls die Verteidigung vollständig bemannt ist, Angriffstruppen."
 }
 
 ai_defense
@@ -54,32 +54,32 @@ ai_defense
 
 ai_defense_descr
 {
-"Fixt einen bug, der die KI davon abhielt fehlende Truppen auf Wällen und Türmen zu verstärken, solange noch Defensivpatroillien vorhanden waren."
+"Fixt den Bug, der die KI davon abhielt, fehlende Truppen auf Wällen und Türmen zu verstärken solange noch Defensivpatrouillien vorhanden waren."
 }
 
 ai_housing
 {
-"Intelligentere Platzierung von Häusern"
+"Intelligenteres Bauen und Abreißen von Häusern"
 }
 
 build_housing_descr
 {
-"Die Differenz aus aktueller und maximal möglicher Bevölkerung, ab der die KI keine Häuser mehr baut. In Vanilla ist diese 0. Diese Option deaktiviert auch das Abreißen von Häusern für die KI."
+"Die Differenz aus aktueller und maximal möglicher Bevölkerung, ab der KIs keine Häuser mehr bauen. In Vanilla ist diese 0. Zudem deaktiviert diese Option das Abreißen von Häusern für KIs."
 }
 
 campfire_housing_descr
 {
-"Wenn mehr als diese Anzahl an freien Bauern am Lagerfeuer sitzen, baut die KI keine Häuser mehr. Diese Option deaktiviert auch das Abreißen von Häusern für die KI."
+"Wenn mehr als diese Anzahl an freien Bauern am Lagerfeuer sitzen, baut die KI keine Häuser mehr. Zudem deaktiviert diese Option das Abreißen von Häusern für KIs."
 }
 
 delete_housing
 {
-"Verhindert das Abreißen von Häusern für die KI."
+"Kein Abreißen von Häusern der KIs."
 }
 
 delete_housing_descr
 {
-"Mit dieser Option wird die KI nie wieder Häuser abreißen."
+"Mit dieser Option reißen KIs keine Häuser mehr ab."
 }
 
 aiv_prompt
@@ -89,7 +89,7 @@ aiv_prompt
 
 aiv_cli_prompt
 {
-"Modifizierte AIVs erkannt. Schreibe 'delete' um sie zu löschen oder einen Ordnernamen um ein Backup zu erstellen."
+"Modifizierte AIVs erkannt. Schreibe 'delete' um sie zu löschen, oder einen Ordnernamen, um ein Backup zu erstellen."
 }
 
 install_abort_io
@@ -114,12 +114,12 @@ o_change_siege_engine_spawn_position_catapult
 
 o_change_siege_engine_spawn_position_catapult_descr
 {
-"Belagerungsgeräte erscheinen nun nach dem Aufbauen am Punkt der Zeltmitte, statt wie bisher in der oberen rechten Ecke des Zelts."
+"Belagerungsgeräte erscheinen nun nach dem Aufbauen in der Zeltmitte, statt wie bisher in der oberen rechten Ecke des Zelts."
 }
 
 o_stop_player_keep_rotation
 {
-"Drehe Spielerberfriede wie die der KI"
+"Drehe Spielerbergfriede wie die der KIs"
 }
 
 o_stop_player_keep_rotation_descr
@@ -129,17 +129,17 @@ o_stop_player_keep_rotation_descr
 
 o_restore_arabian_engineer_speech
 {
-"Arabische Baumeister sprechen Arabisch"
+"Baumeister arabischer Lords sprechen Arabisch"
 }
 
 o_restore_arabian_engineer_speech_descr
 {
-"Erlaubt den Baumeistern im Falle, dass der Spieler den Arabischen Lord auswählt, die originalen Arabischen Sprachdateien zu verwenden."
+"Falls der Spieler den arabischen Lord auswählt nutzen Baumeister nun die arabischen Sprachdateien."
 }
 
 u_fix_lord_animation_stuck_movement
 {
-"Setzt den Lordanimation nach Zerstörung von Gebäuden zurück"
+"Setzt die Lordanimation nach Zerstörung von Gebäuden zurück"
 }
 
 u_fix_lord_animation_stuck_movement_descr
@@ -169,14 +169,12 @@ u_fix_applefarm_blocking_descr
 
 o_increase_path_update_tick_rate
 {
-"Suche öfter nach verfügbaren Wegen"
+"Suche öfter nach verfügbaren Pfaden"
 }
 
 o_increase_path_update_tick_rate_descr
 {
-"In Vanilla dauerte es 200 Spiele Ticks, bis neue Pfade berechnet wurden. Dies verzögerte oft nach Zerstörung von Türmen oder Torhäusern das Betreten der gegnerischen Burg.
-
-Erreichbarkeit wird nun alle 50 Ticks berechnet, wodurch Einheiten Breschen schneller erkennen können."
+"In Vanilla dauert es 200 Spielticks, bis neue Pfade berechnet werden. Dies verzögert oft nach Zerstörung von Türmen oder Torhäusern das Betreten der gegnerischen Burg. Nun wird alle 50 Ticks nach neuen Pfaden gesucht, wodurch Einheiten beispielsweise Breschen schneller erkennen können."
 }
 
 o_fix_ladderclimb
@@ -196,17 +194,17 @@ u_tanner_fix
 
 u_tanner_fix_descr
 {
-"Gerber kehren nicht länger ohne Kuh zurück, falls ihre anvisierte Kuh bereits fort ist. Sie warten nun, bis sie eine andere Kuh mitnehmen können."
+"Gerber kehren nicht länger ohne Kuh zurück, falls ihre anvisierte Kuh bereits weg ist. Sie warten nun, bis sie eine andere Kuh mitnehmen können."
 }
 
 o_fix_fletcher_bug
 {
-"Entfernt den Extraweg des Pfeilmachers zur Werkstatt"
+"Entfernt einen Extraweg des Pfeilmachers zur Werkstatt"
 }
 
 o_fix_fletcher_bug_descr
 {
-"Passt das Verhalten des Pfeilmachers and andere Waffenproduzenten an. Nach Abgabe seines Gutes, geht er nun direkt zum Vorratslager, statt erneut zur Werkstatt zurückzukehren."
+"Passt das Verhalten des Pfeilmachers an andere Waffenproduzenten an. Nach Abgabe seines Gutes geht er nun direkt zum Vorratslager, statt erneut zur Werkstatt zurückzukehren."
 }
 
 ai_fix_crusader_archers_pitch
@@ -216,7 +214,7 @@ ai_fix_crusader_archers_pitch
 
 ai_fix_crusader_archers_pitch_descr
 {
-"Bisher waren nur Arabische Bogenschützen der KI in der Lage gezielt Pechgraben mit Feuerpfeilen zu entzünden. Mit dieser Änderung können sie diesen nun auch mit Europäischen Bogenschützen auslösen."
+"Bisher waren nur arabische Bogenschützen der KI in der Lage Pechgräben mit Feuerpfeilen zu entzünden; mit dieser Änderung nun auch europäischen Bogenschützen Pechgräben entzünden."
 }
 
 o_fix_baker_disappear
@@ -231,12 +229,12 @@ o_fix_baker_disappear_descr
 
 o_fix_moat_digging_unit_disappearing
 {
-"Behebt das Verschwinden von Ausbuddlern"
+"Behebt das Verschwinden von Truppen, welchen Burggräben ausheben."
 }
 
 o_fix_moat_digging_unit_disappearing_descr
 {
-"Behebt das Verschwinden von Einheiten, die mit dem Ausbuddeln des Wassergrabens beschäftigt waren. Allerdings können Einheiten, die beim Ausbuddeln neue Befehle kriegen immer noch verschwinden, sollten sie auf unbegehbarem Terrain stehen."
+"Behebt das Verschwinden von Truppen, welche mit dem Ausheben von Burggräben beschäftigt sind. Truppen verschwinden allerdings weiterhin, falls diese einen neuen Befehle bekommen und zeitgleich auf unbegehbarem Terrain stehen."
 }
 
 // ======================
