--- a/UnofficialCrusaderPatch/Localization/Hungarian.txt
+++ b/UnofficialCrusaderPatch/Localization/Hungarian.txt
@@ -266,7 +266,9 @@ Projektvezetők
 Fejlesztők
 [LordHansCapon](https://github.com/LordHansCapon)  
 [np123](https://github.com/patel-nikhil)  
+[gynt](https://github.com/gynt)
 [J-T-de](https://github.com/J-T-de)  
+[Le spec](https://github.com/LeSpec)  
 [Chaf1812](https://github.com/Chaf1812)  
 
 Fordítók
