Correcting minor bugs  1.05.2021
Correcting minor bugs  1.05.2021

--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -242,7 +242,7 @@ o_fix_moat_digging_unit_disappearing_descr
 
 ui_welcometext
 {
-"Это не оффициальный патч для Stronghold Crusader.
+"Это неофициальный патч для Stronghold Crusader.
 Проект доступен в виде открытого исходного кода по адресу [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch).
 
 Любая версия Crusader потенциально поддерживается, но так как изменения были получены из версии 1.41 Steam-Version, могут появиться несовместимости.
@@ -516,8 +516,8 @@ u_spearmen
 
 u_spearmen_descr
 {
-	" - Копейщики умирают только после 5 стрел, вместо 3
-  - Копейщики едва выдержали один выстрел арбалета, вместо того,чтобы получить одноразовый"
+	" - Копейщики умирают после 5 попаданий стрел из лука, вместо 3
+  - Копейщики едва выдерживали один выстрел из арбалета, вместо того,чтобы умереть от одного выстрела"
 }
 
 ui_error
